detail info refinement

--- a/frontend_Vite/index.html
+++ b/frontend_Vite/index.html
@@ -11,7 +11,7 @@
       };
     </script>
     <script async
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkGZwzeqoVwtFNHfvKfSnEktdg16oqK3E&callback=initMap&libraries=maps,marker&v=beta">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkGZwzeqoVwtFNHfvKfSnEktdg16oqK3E&callback=initMap&libraries=maps,marker&v=beta&language=en">
     </script>
     <style>
       html, body {
